html af billede og overskrift

--- a/index.html
+++ b/index.html
@@ -21,4 +21,13 @@
         <li class="knap"><a href="#">Kontakt</a></li>
       </ul>
     </nav>
+
+    <div class="container">
+      <img class="havn" src="havn.jpeg" alt="Billede">
+      <h1 class="overskrift">Karrebæksminde Fiskeri- og Bymuseum</h1>
+    </div>
+
+
+
+    </body>
   <html>
