--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <div class="container">
-      <img class="havn" src="havn.jpeg" alt="Billede">
+      <img class="havn" src="billeder/havn.jpeg" alt="Billede">
       <h1 class="overskrift">Karrebæksminde Fiskeri- og Bymuseum</h1>
     </div>
 
