--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- NAVIGATIONS MENUEN -->
   <body>
     <nav>
-      <img  class=logo src="billeder/Fiske-logo.svg"
+      <img  class=logo src="billeder/Fiske-logo.svg">
       <ul>
         <li><a href="#">Forside</a></li>
         <li><a href="#">Organisation</a></li>
