--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
       <h1 class="overskrift">Karrebæksminde Fiskeri- og Bymuseum</h1>
     </div>
 
+  <div class="slider-container">
+    <div class="slider">
+      <div class="img-container"><img class="slider-img "src="billeder/murer-mester-martin.png" alt="Murer mester Martin"></div>
+      <div class="slider-text">
+        <h2>Murer mester Martin murer muren</h2>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </p>
+      </div>
+    </div>
+  </div>
 
 
     </body>
