--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
 
   <div class="slider-container">
+    <a class="link-container"><div class="link"> <img src="billeder/1814084_arrow_back_left_previous_icon.svg" alt=""></div></a>
     <div class="slider">
       <div class="img-container"><img class="slider-img "src="billeder/murer-mester-martin.png" alt="Murer mester Martin"></div>
       <div class="slider-text">
@@ -36,6 +37,7 @@
         </p>
       </div>
     </div>
+    <a class="link-container"><div class="link"><img src="billeder/1814086_arrow_forward_next_right_icon.svg" alt=""></div></a>
   </div>
 
 
