fixed navbar og om os

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
     <!-- NAVIGATIONS MENUEN -->
+    <main>
   <body>
     <nav>
       <img  class=logo src="billeder/Fiske-logo.svg">
@@ -26,7 +27,16 @@
       <img class="havn" src="billeder/havn.jpeg" alt="Billede">
       <h1 class="overskrift">Karrebæksminde Fiskeri- og Bymuseum</h1>
     </div>
-
+    <div class="omos-container">
+    <div>
+    <h2 class="om-os">Om os</h2>
+    <div>
+    <p class="om-os-paragraf">Karrebæksminde Fiskeri- og Bymuseum er et foreningsejet lokalmuseum</p> <p class="om-os-paragraf2">for Karrebæksminde.</p>
+      <p class="om-os-paragraf3">Museet drives af foreningen Karrebæksminde Fiskeri- og Bymuseum.</p>
+      <p class="om-os-paragraf4">Museet er oprettet i 2004 og har til huse i Karrebæksmindes ældste hus,</p><p class="om-os-paragraf5"> Materielhuset fra 1809. </p> </br>
+    </div>
+  </div>
+  </div>
   <div class="slider-container">
     <a class="link-container"><div class="link"> <img src="billeder/1814084_arrow_back_left_previous_icon.svg" alt=""></div></a>
     <div class="slider">
@@ -42,4 +52,5 @@
 
 
     </body>
+    </main>
   <html>
