--- a/index.html
+++ b/index.html
@@ -50,7 +50,50 @@
     <a class="link-container"><div class="link"><img src="billeder/1814086_arrow_forward_next_right_icon.svg" alt=""></div></a>
   </div>
 
-
+<!--Footer-->
+<section id="kontakt">
+  <footer>
+  <div class="foooter">
+    <div>
+      <h1>Infomationer</h1>
+      <p>Karrebæksminde Fiskeri- og Bymuseum 
+      <BR>
+      Alleen 38A 4736
+      <BR>
+      4736 Karrebæksminde</p>
+      <br>
+      <p>Kontakt os:</p>
+      <p>Mail: info@kbm-museum.dk</p>
+    </div>
+    <div>
+      <h1>Åbningstider</h1>
+      <p>Alle dage 11-17</p>
+    </div>
+    <div>
+      <h1>Sponsorer</h1> 
+      <div class ="sponsoer">
+        <p>Kanal kroen</p>
+        <p>Marine Technic</p>
+        <p>Martens Røgeri</p>
+        <p>Næstved Skilte</p>
+        <p>Næstvedmægleren</p>
+        <p>Pandekagehuset</p>
+        <p>V. Jørgensen VVS</p>
+        <p>El og Teknik</p>
+        <p>Enø Camping</p>
+        <p>Erhversforeningen Karrebæksminde  </p>
+        <p>Enø Spisehus</p>
+        <p>Fiskehuset Enø</p>
+        <p>Visuel Grafisk</p>
+        <p>Sandved Smede- og Maskinforretning</p>
+        <p>Smålandshavet Restaurant og Kursuscenter</p>
+        <p>Sydbank</p>
+        <p>Tommy R. N. Martens</p>
+      </div>  
+    </div>
+  </div>
+  </footer>
+</section>
     </body>
     </main>
   <html>
