--- a/index.html
+++ b/index.html
@@ -67,31 +67,20 @@
     </div>
     <div>
       <h1>Åbningstider</h1>
-      <p>Alle dage 11-17</p>
-    </div>
-    <div>
-      <h1>Sponsorer</h1> 
-      <div class ="sponsoer">
-        <p>Kanal kroen</p>
-        <p>Marine Technic</p>
-        <p>Martens Røgeri</p>
-        <p>Næstved Skilte</p>
-        <p>Næstvedmægleren</p>
-        <p>Pandekagehuset</p>
-        <p>V. Jørgensen VVS</p>
-        <p>El og Teknik</p>
-        <p>Enø Camping</p>
-        <p>Erhversforeningen Karrebæksminde  </p>
-        <p>Enø Spisehus</p>
-        <p>Fiskehuset Enø</p>
-        <p>Visuel Grafisk</p>
-        <p>Sandved Smede- og Maskinforretning</p>
-        <p>Smålandshavet Restaurant og Kursuscenter</p>
-        <p>Sydbank</p>
-        <p>Tommy R. N. Martens</p>
+<p>Mandag: 11-17</p>
+        <p>Tirsdag: 11-17</p>
+          <p> Onsdag: 11-17</p>
+            <p> Torsdag: 11-17</p>
+              <p> Fredag: 11-17</p>
+                <p> Lørdag: 11-17</p>
+                  <p> Søndag: 11-17</p>
+      </div>
+      <div class="sponsor2">
+      <h1 class="sponserer">Sponsorer</h1> 
+       <button class="klikher"><a href="#">Klik her</a></button>
       </div>  
     </div>
-  </div>
+    
   </footer>
 </section>
     </body>
