--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div>
     <p class="om-os-paragraf">Karrebæksminde Fiskeri- og Bymuseum er et foreningsejet lokalmuseum</p> <p class="om-os-paragraf2">for Karrebæksminde.</p>
       <p class="om-os-paragraf3">Museet drives af foreningen Karrebæksminde Fiskeri- og Bymuseum.</p>
-      <p class="om-os-paragraf4">Museet er oprettet i 2004 og har til huse i Karrebæksmindes ældste hus,</p><p class="om-os-paragraf5"> Materielhuset fra 1809. </p> </br>
+      <p class="om-os-paragraf4">Museet er oprettet i 2004 og har til huse i Karrebæksmindes ældste hus,</p><p class="om-os-paragraf5"> Materielhuset fra 1809. </p>
     </div>
   </div>
   </div>
