--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>forside</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="popup.js"></script>
   </head>
     <!-- NAVIGATIONS MENUEN -->
     <main>
@@ -56,7 +57,7 @@
   <div class="foooter">
     <div>
       <h1>Infomationer</h1>
-      <p>Karrebæksminde Fiskeri- og Bymuseum 
+      <p>Karrebæksminde Fiskeri- og Bymuseum
       <BR>
       Alleen 38A 4736
       <BR>
@@ -76,13 +77,14 @@
                   <p> Søndag: 11-17</p>
       </div>
       <div class="sponsor2">
-      <h1 class="sponserer">Sponsorer</h1> 
+      <h1 class="sponserer">Sponsorer</h1>
        <button class="klikher"><a href="#">Klik her</a></button>
-      </div>  
+      </div>
     </div>
-    
+
   </footer>
 </section>
+<div id="popup"><b>BLIV! <b> MEDLEM! <b> NU!</div>
     </body>
     </main>
   <html>
