--- a/index.html
+++ b/index.html
@@ -11,19 +11,31 @@
     <!-- NAVIGATIONS MENUEN -->
     <main>
   <body>
-    <nav>
-      <img  class=logo src="billeder/Fiske-logo.svg">
-      <ul>
-        <li><a href="#">Forside</a></li>
-        <li><a href="#">Organisation</a></li>
-        <li><a href="#">Medlem/Bruger</a></li>
-        <li><a href="#">Arrangementer</a></li>
-        <li><a href="#">Karrebæksmindes Historie</a></li>
-        <li><a href="#">Lodsen</a></li>
-        <li class="knap"><a href="#">Kontakt</a></li>
-      </ul>
-    </nav>
+    <header>
+    <nav class="navbar">
+      <a href="#" class="nav-branding">Karrebæksminde Fiskeri- og Bymuseum</a>
 
+      <ul class="nav-menu">
+        <li class="nav-item"> 
+      <a href="#" class="nav-link">Hjem</a>
+        </li>
+        <li class="nav-item"> 
+          <a href="#" class="nav-link">Omkring</a>
+            </li>
+            <li class="nav-item"> 
+              <a href="#" class="nav-link">Kontakt</a>
+                </li>
+      </ul>
+<div class="hamburger">
+  <span class="bar"></span>
+  <span class="bar"></span>
+  <span class="bar"></span>
+
+</div>
+
+      <img  class=logo src="billeder/Fiske-logo.svg">
+    </nav>
+  </header>
     <div class="container">
       <img class="havn" src="billeder/havn.jpeg" alt="Billede">
       <h1 class="overskrift">Karrebæksminde Fiskeri- og Bymuseum</h1>
