--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="popup.js"></script>
+<script src="burger.js"></script>
   </head>
     <!-- NAVIGATIONS MENUEN -->
     <main>
   <body>
     <header>
     <nav class="navbar">
-      <a href="#" class="nav-branding">Karrebæksminde Fiskeri- og Bymuseum</a>
-
       <ul class="nav-menu">
+        <img  class=logo src="billeder/Fiske-logo.svg">
         <li class="nav-item"> 
       <a href="#" class="nav-link">Hjem</a>
         </li>
@@ -26,14 +25,11 @@
               <a href="#" class="nav-link">Kontakt</a>
                 </li>
       </ul>
-<div class="hamburger">
+<div class="burgermenu">
   <span class="bar"></span>
   <span class="bar"></span>
   <span class="bar"></span>
-
 </div>
-
-      <img  class=logo src="billeder/Fiske-logo.svg">
     </nav>
   </header>
     <div class="container">
