--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
     <div>
       <h1>Åbningstider</h1>
 <p>Mandag: 11-17</p>
-<p>Tirsdag: 11-17</p>
-<p> Onsdag: 11-17</p>
-<p> Torsdag: 11-17</p>
-<p> Fredag: 11-17</p>
-<p> Lørdag: 11-17</p>
-<p> Søndag: 11-17</p>
+        <p>Tirsdag: 11-17</p>
+          <p> Onsdag: 11-17</p>
+            <p> Torsdag: 11-17</p>
+              <p> Fredag: 11-17</p>
+                <p> Lørdag: 11-17</p>
+                  <p> Søndag: 11-17</p>
       </div>
       <div class="sponsor2">
       <h1 class="sponserer">Sponsorer</h1>
@@ -112,7 +112,7 @@
   </div>
   </footer>
 </section>
-<button id="popup"><a href="organisation.html"><b> <br> KONTAKT OS!</a></button>
+<div id="popup"><b>BLIV! <b> MEDLEM! <b> NU!</div>
     </body>
     </main>
   <html>
