--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <script src="popup.js"></script>
   </head>
-    <!-- NAVIGATIONS MENUEN -->
+      <!-- NAVIGATIONS MENUEN -->
     <main>
   <body>
     <nav>
@@ -87,4 +87,4 @@
 <div id="popup"><b>BLIV! <b> MEDLEM! <b> NU!</div>
     </body>
     </main>
-  <html>
+  </html>
