--- a/index.html
+++ b/index.html
@@ -8,22 +8,42 @@
     <link rel="stylesheet" href="stylesheet.css">
     <script src="popup.js"></script>
     <script src="slider.js" defer></script>
+    <script src="burger.js" defer></script>
   </head>
     <!-- NAVIGATIONS MENUEN -->
-    <main>
   <body>
-    <nav>
-      <img  class=logo src="billeder/Fiske-logo.svg">
-      <ul>
-        <li><a href="#">Forside</a></li>
-        <li><a href="#">Organisation</a></li>
-        <li><a href="#">Medlem/Bruger</a></li>
-        <li><a href="#">Arrangementer</a></li>
-        <li><a href="#">Karrebæksmindes Historie</a></li>
-        <li><a href="#">Lodsen</a></li>
-        <li class="knap"><a href="#">Kontakt</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav class="navbar">
+        <img class="logo" src="billeder/Fiske-logo.svg" alt="Logo">
+          <ul class="nav-menu">
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Forside</a>
+              </li>
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Organisation</a>
+              </li>
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Medlem/Bruger</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Arrangementer</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Karrebæksmindes Historie</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">"Lodsen"</a>
+        </li>
+          </ul>
+          <div class="burgermenu">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+  
+          </div>
+      </nav>
+  </header>
+  
 
     <div class="container">
       <img class="havn" src="billeder/havn.jpeg" alt="Billede">
@@ -84,5 +104,4 @@
 </section>
 <button id="popup"><a href="organisation.html"><b> <br> KONTAKT OS!</a></button>
     </body>
-    </main>
   <html>
