--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   <a href="#" class="nav-link">Forside</a>
               </li>
               <li class="nav-item">
-                  <a href="#" class="nav-link">Organisation</a>
+                  <a href="organisationv1.html" class="nav-link">Organisation</a>
               </li>
               <li class="nav-item">
                   <a href="#" class="nav-link">Medlem/Bruger</a>
@@ -87,12 +87,12 @@
     <div>
       <h1>Åbningstider</h1>
 <p>Mandag: 11-17</p>
-        <p>Tirsdag: 11-17</p>
-          <p> Onsdag: 11-17</p>
-            <p> Torsdag: 11-17</p>
-              <p> Fredag: 11-17</p>
-                <p> Lørdag: 11-17</p>
-                  <p> Søndag: 11-17</p>
+    <p>Tirsdag: 11-17</p>
+    <p> Onsdag: 11-17</p>
+    <p> Torsdag: 11-17</p>
+    <p> Fredag: 11-17</p>
+    <p> Lørdag: 11-17</p>
+    <p> Søndag: 11-17</p>
       </div>
       <div class="sponsor2">
       <h1 class="sponserer">Sponsorer</h1>
