--- a/organisationv1.html
+++ b/organisationv1.html
@@ -7,6 +7,7 @@
     <title>organisation</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="organisationv1.js" defer></script>
+    <script src="burger.js" defer></script>
   </head>
     <!-- NAVIGATIONS MENUEN -->
     <body>
