popup er linket

--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
 
   </footer>
 </section>
-<button id="popup"><a href="organisation.html"><b> <br> KONTAKT OS!</a></button>
+<button id="popup"><a href="organisationv1.html"><b> <br> KONTAKT OS!</a></button>
     </body>
   <html>
