--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="popup.js"></script>
     <script src="slider.js" defer></script>
     <script src="burger.js" defer></script>
-    <script src"java
+    <script src="java.js" defer></script>
   </head>
     <!-- NAVIGATIONS MENUEN -->
   <body>
@@ -70,6 +70,9 @@
     
   </div>
 
+  <div id="scroller-text">Vores sponsorer!</div>
+  <button id="scroll-button">Klik her!</button>
+
 <!--Footer-->
 <section id="kontakt">
   <footer>
@@ -95,11 +98,11 @@
     <p> Lørdag: 11-17</p>
     <p> Søndag: 11-17</p>
       </div>
+    
       <div class="sponsor2">
       <h1 class="sponserer">Sponsorer</h1>
        <button class="klikher"><a href="#">Klik her</a></button>
       </div>
-    </div>
 
   </footer>
 </section>
